--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,7 @@
   --color-text-light: #666666;
   --color-background: #FFFFFF;
   --color-surface: #F5F5F5;
+  --color-border: #333333;
 
   /* Celebration colors */
   --color-celebration-1: #FFD93D;
